--- a/Aayush_and_Nishan_Quiz_7.ipynb
+++ b/Aayush_and_Nishan_Quiz_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Aayush and Nishan Quiz 7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/ZeYMMIty2tGVXlttD0xw",
+      "authorship_tag": "ABX9TyMIqr67xUtXzyOYjNy81gZq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Challenge question: Asked by Ayush \n",
+        "\n",
+        "What is the difference in liquor sales (Dollar amount) in the POLK county of Iowa state in the month of April 2020 and 2021? Find out the increase or decrease in liquor consumption(in gallons) as a result of stay at home order because of COVID-19.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SuFi79a9qcDw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import auth\n",
@@ -52,7 +64,7 @@
         "id": "uXyajfNzoRno",
         "outputId": "bd87db2e-40bf-4c11-992a-4f87e06b0713"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +100,7 @@
         "id": "tblbh2EQogf0",
         "outputId": "09fa589c-6efc-4149-f608-789a4142a24c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +422,7 @@
         "id": "KGIbCxPvouCA",
         "outputId": "90f1e5d7-bbc2-45b8-f431-035cc72da607"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +606,7 @@
         "id": "nTX9CWCwo2u_",
         "outputId": "2f6c7eb1-9a2d-4be2-9e98-a9e044f05e64"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +789,7 @@
         "id": "9BsOp3aoo8Lv",
         "outputId": "8cab8a13-b6b9-4872-bcc1-597e58bd0024"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +944,7 @@
         "id": "7VzqaEFvpBx3",
         "outputId": "83132c0c-7607-4a3a-fa91-b73fe5a41388"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
