--- a/Quiz8.ipynb
+++ b/Quiz8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNr6nh3+YL93AyginXDhAA/",
+      "authorship_tag": "ABX9TyNGfzLHdn6x5j/gVhnN23wb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,15 +217,98 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "#Tabular Form"
       ],
       "metadata": {
-        "id": "dJGyquoL4-sP"
+        "id": "iLrnDZax7mo_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tabulate import tabulate\n",
+        "table = html_soup.find_all(class_ = 'infobox vevent')[0] \n",
+        "df = pd.read_html(str(table))\n",
+        "print( tabulate(df[0], headers='keys', tablefmt='psql') )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dJGyquoL4-sP",
+        "outputId": "79a9b10a-4b95-401e-acd8-6e5c856fabe1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+----------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+            "|    | Ozark                | Ozark.1                                                                                                                                                                                                                                                             |\n",
+            "|----+----------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|\n",
+            "|  0 | nan                  | nan                                                                                                                                                                                                                                                                 |\n",
+            "|  1 | Genre                | Crime drama Thriller                                                                                                                                                                                                                                                |\n",
+            "|  2 | Created by           | Bill Dubuque Mark Williams                                                                                                                                                                                                                                          |\n",
+            "|  3 | Starring             | Jason Bateman Laura Linney Sofia Hublitz Skylar Gaertner Julia Garner Jordana Spiro Jason Butler Harner Esai Morales Peter Mullan Lisa Emery Charlie Tahan Janet McTeer Tom Pelphrey Jessica Frances Dukes Felix Solis Damian Young Alfonso Herrera Adam Rothenberg |\n",
+            "|  4 | Composers            | Danny Bensi Saunder Jurriaans                                                                                                                                                                                                                                       |\n",
+            "|  5 | Country of origin    | United States                                                                                                                                                                                                                                                       |\n",
+            "|  6 | Original language    | English                                                                                                                                                                                                                                                             |\n",
+            "|  7 | No. of seasons       | 4                                                                                                                                                                                                                                                                   |\n",
+            "|  8 | No. of episodes      | 37 (list of episodes)                                                                                                                                                                                                                                               |\n",
+            "|  9 | Production           | Production                                                                                                                                                                                                                                                          |\n",
+            "| 10 | Executive producers  | Jason Bateman Chris Mundy Bill Dubuque Mark Williams                                                                                                                                                                                                                |\n",
+            "| 11 | Production location  | Georgia                                                                                                                                                                                                                                                             |\n",
+            "| 12 | Cinematography       | Ben Kutchins Armando Salas                                                                                                                                                                                                                                          |\n",
+            "| 13 | Running time         | 51–80 minutes                                                                                                                                                                                                                                                       |\n",
+            "| 14 | Production companies | MRC Aggregate Films Zero Gravity Management Headhunter Films Man, Woman & Child Productions                                                                                                                                                                         |\n",
+            "| 15 | Distributor          | Netflix                                                                                                                                                                                                                                                             |\n",
+            "| 16 | Release              | Release                                                                                                                                                                                                                                                             |\n",
+            "| 17 | Original network     | Netflix                                                                                                                                                                                                                                                             |\n",
+            "| 18 | Picture format       | 4K (Ultra HD) High dynamic range                                                                                                                                                                                                                                    |\n",
+            "| 19 | Audio format         | Dolby Digital 5.1                                                                                                                                                                                                                                                   |\n",
+            "| 20 | Original release     | July 21, 2017present                                                                                                                                                                                                                                                |\n",
+            "| 21 | External links       | External links                                                                                                                                                                                                                                                      |\n",
+            "| 22 | Website              | Website                                                                                                                                                                                                                                                             |\n",
+            "+----+----------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table = html_soup.find_all(class_ = 'wikitable plainrowheaders')[0]\n",
+        "dataFrame = pd.read_html(str(table))\n",
+        "print( tabulate(dataFrame[0], headers='keys', tablefmt='psql') )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OmBjbLCt7M7R",
+        "outputId": "10ead24d-f224-451f-beab-2634b842985e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+----------+------------+------------+--------------+-----------------------+-------------------------+\n",
+            "|    |   Season |   Season.1 | Episodes   |   Episodes.1 | Originally released   | Originally released.1   |\n",
+            "|----+----------+------------+------------+--------------+-----------------------+-------------------------|\n",
+            "|  0 |      nan |          1 | 10         |           10 | July 21, 2017         | July 21, 2017           |\n",
+            "|  1 |      nan |          2 | 10         |           10 | August 31, 2018       | August 31, 2018         |\n",
+            "|  2 |      nan |          3 | 10         |           10 | March 27, 2020        | March 27, 2020          |\n",
+            "|  3 |      nan |          4 | 14[12]     |            7 | January 21, 2022      | January 21, 2022        |\n",
+            "|  4 |      nan |          4 | 14[12]     |            7 | 2022                  | 2022                    |\n",
+            "+----+----------+------------+------------+--------------+-----------------------+-------------------------+\n"
+          ]
+        }
+      ]
     }
   ]
 }
