--- a/Quiz8.ipynb
+++ b/Quiz8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGfzLHdn6x5j/gVhnN23wb",
+      "authorship_tag": "ABX9TyNXSqh0AqEo9Brr8iKg6YkO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,13 +42,23 @@
       "cell_type": "markdown",
       "source": [
         "#Today's Assignment: Web Scraping\n",
-        "Navigate you the wikipedia page for your favorite television show or sports club.\n",
+        "Navigate the wikipedia page for your favorite television show or sports club.\n",
         "\n",
         "1. Display the title for the page\n",
         "2. Within an interesting table, retrieve all links and store them in a list"
       ],
       "metadata": {
         "id": "8R42_HWl0JlK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I am going to choose Ozark TV series to display the title for the page and retrieve all links to store them in a list. Here is the wikipedia link:\n",
+        "https://en.wikipedia.org/wiki/Ozark_(TV_series)"
+      ],
+      "metadata": {
+        "id": "63s6R--X19A1"
       }
     },
     {
@@ -62,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "LnXpyV9lzXvi"
       },
@@ -72,16 +82,6 @@
         "import pandas as pd\n",
         "from bs4 import BeautifulSoup"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "I am going to choose Ozark TV series to display the title for the page and retrieve all links to store them in a list. Here is the wikipedia link:\n",
-        "https://en.wikipedia.org/wiki/Ozark_(TV_series)"
-      ],
-      "metadata": {
-        "id": "63s6R--X19A1"
-      }
     },
     {
       "cell_type": "code",
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "vCrhmQLl11iJ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "id": "h-efw2Kw4ZGz",
         "outputId": "5c2bc82f-cc7b-496e-d31a-6af5f753dd2f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +162,7 @@
         "id": "DyNYN2RR4inw",
         "outputId": "63f19639-f596-4e25-8798-18c20719af8a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
         "id": "dJGyquoL4-sP",
         "outputId": "79a9b10a-4b95-401e-acd8-6e5c856fabe1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,7 +291,7 @@
         "id": "OmBjbLCt7M7R",
         "outputId": "10ead24d-f224-451f-beab-2634b842985e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
