--- a/Quiz14.ipynb
+++ b/Quiz14.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRhe5CjNlH1zRXnbxN/CLz",
+      "authorship_tag": "ABX9TyM0kqtfgOsbiDgc7kyl9KE5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,31 +50,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cd6JP5GcYjf9",
-        "outputId": "5f60a123-55d8-48de-968f-106ebbd756e6"
+        "outputId": "4afefba9-f9c9-4bc2-fde6-96de0760963d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Happy Birthday to You,\n",
-            "Happy Birthday to You,\n",
-            "Happy Birthday Dear Nishan,\n",
-            "Happy Birthday to You.\n"
+            "You say its your birthday,\n",
+            "Its my birthday too, yeah!\n",
+            "They say its your birthday,\n",
+            "We are gonna have a good time,\n",
+            "Im glad its your birthday,\n",
+            "Happy birthday to you Nishan.\n",
+            "#The Beatles\n"
           ]
         }
       ],
       "source": [
         "#Happy Birthday to me\n",
-        "birthday_song = 'Happy Birthday to You,\\nHappy Birthday to You,\\nHappy Birthday Dear Nishan,\\nHappy Birthday to You.'\n",
+        "birthday_song = 'You say its your birthday,\\nIts my birthday too, yeah!\\nThey say its your birthday,\\nWe are gonna have a good time,\\nIm glad its your birthday,\\nHappy birthday to you Nishan.\\n#The Beatles'\n",
         "print(birthday_song)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jNUZqOk_eAgk"
+      },
+      "execution_count": 15,
+      "outputs": []
     }
   ]
 }
