--- a/EXAM2.ipynb
+++ b/EXAM2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EXAM2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPByJjc2ZPRTo3vAO9NwkSl",
+      "authorship_tag": "ABX9TyNRUtzBu2l/3XzFzd4FWv+o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2187,6 +2187,26 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2. (10 points) Questions about the exam\n",
+        "(a) Approximately how long did you work on this exam?\n",
+        "\n",
+        "= I was able to complete Exam2 in multiple sitting which took approximately 4 to 5 hours.\n",
+        "\n",
+        "(b) Which was the hardest and easiest topic from this section?\n",
+        "\n",
+        "= In my opinion, I found question number 1(a) to be the easiest as we were only asked to store the data in pandas dataframe and then comment on the appropriateness of each datatype. Question no. 1(h) was the hardest one for me cuz I couldn't solve it. For this particular question I had to ask help from my classmate as have it solved.\n",
+        "\n",
+        "(c) Which method of cleaning data should I have spent more instructional time on?\n",
+        "\n",
+        "= For a dataset to look descriptive, attractive and informative we used many cleaning methods like dropping unnecessary columns, changing the appropriate datatypes, changing the in dataframe and many more. I believe all these cleaning tools are important and we should be using all of it frequently. "
+      ],
+      "metadata": {
+        "id": "FJqwzUV4AIFq"
+      }
     }
   ]
 }
