--- a/EXAM2.ipynb
+++ b/EXAM2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EXAM2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRUtzBu2l/3XzFzd4FWv+o",
+      "authorship_tag": "ABX9TyPwZgip2E5X5BlzevqTePDv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,10 @@
       "cell_type": "markdown",
       "source": [
         "##Refrences\n",
+        "\n",
+        "1. https://github.com/nurfnick/Data_Viz\n",
+        "2. https://github.com/nurfnick/Data_Viz/blob/main/20_Cleaning_Conclusion.ipynb\n",
+        "3. https://github.com/Nissun662/Data-Visual\n",
         "\n",
         "\n",
         "\n",
@@ -2185,7 +2189,7 @@
       "metadata": {
         "id": "el7rYxK89rmH"
       },
-      "execution_count": null,
+      "execution_count": 315,
       "outputs": []
     },
     {
