--- a/EXAM2.ipynb
+++ b/EXAM2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EXAM2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwZgip2E5X5BlzevqTePDv",
+      "authorship_tag": "ABX9TyPBPSQXBV+efoJuFJW9WiFT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2202,7 +2202,7 @@
         "\n",
         "(b) Which was the hardest and easiest topic from this section?\n",
         "\n",
-        "= In my opinion, I found question number 1(a) to be the easiest as we were only asked to store the data in pandas dataframe and then comment on the appropriateness of each datatype. Question no. 1(h) was the hardest one for me cuz I couldn't solve it. For this particular question I had to ask help from my classmate as have it solved.\n",
+        "= In my opinion, I found question number 1(a) to be the easiest as we were only asked to store the data in pandas dataframe and then comment on the appropriateness of each datatype. Question no. 1(h) was the hardest one for me cuz I couldn't solve it.\n",
         "\n",
         "(c) Which method of cleaning data should I have spent more instructional time on?\n",
         "\n",
