--- a/EXAM2.ipynb
+++ b/EXAM2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EXAM2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBPSQXBV+efoJuFJW9WiFT",
+      "authorship_tag": "ABX9TyMBWuEae6qt0Zg7mh+XHkjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,7 @@
         "1. https://github.com/nurfnick/Data_Viz\n",
         "2. https://github.com/nurfnick/Data_Viz/blob/main/20_Cleaning_Conclusion.ipynb\n",
         "3. https://github.com/Nissun662/Data-Visual\n",
+        "4. https://www.marsja.se/pandas-convert-column-to-datetime/\n",
         "\n",
         "\n",
         "\n",
@@ -1002,7 +1003,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now, changing the object type into DateTime."
+        "Now, changing the object type into DateTime using `astype` function."
       ],
       "metadata": {
         "id": "OSQmDwS2guew"
@@ -1011,17 +1012,17 @@
     {
       "cell_type": "code",
       "source": [
-        "df.activity_day = pd.to_datetime(df.activity_day)\n",
-        "df.activity_day.dtypes #the <M8[ns] represents Datetime datatype"
+        "df.activity_day = df.activity_day.astype('datetime64[ns]') #the <M8[ns] represents Datetime datatype\n",
+        "df.activity_day.dtype"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xDPjhvRygteR",
-        "outputId": "0e627ad5-16a6-4259-8ea5-cf9e0ef20250"
+        "id": "Ncgtah8AMqGj",
+        "outputId": "78fc0f41-eb75-455e-db24-4e18ec34b138"
       },
-      "execution_count": 281,
+      "execution_count": 321,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1032,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 281
+          "execution_count": 321
         }
       ]
     },
